--- a/Selectores/primer_proyecto/index.html
+++ b/Selectores/primer_proyecto/index.html
@@ -6,13 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles.css">
-    <title>Primero Proyecto Selectores</title>
+    <title>Primero Proyecto Selectores - BLOG</title>
 </head>
 <body>
     <nav class="nav">
         <section>
             <h2>Soy un menu de Navegacion</h2>
         </section>
+        </nav>
         <br>
         <section id="section">
             <h2 class="titulo">Mi Primer Blog</h2>
@@ -25,6 +26,6 @@
         <a href="https://facebook.com">Facebook</a>
         <a href="hsttps://gmail.com">Gmail</a>
         <a Soy diferente no tengo href></a>
-    </nav>
+
 </body>
 </html>
