--- a/Bordes_Sombras_CARDS/Border-Radius/Practica/index.html
+++ b/Bordes_Sombras_CARDS/Border-Radius/Practica/index.html
@@ -6,14 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles.css">
-    <title>Border-Radius</title>
+    <title>Practica Card-Simple</title>
 </head>
 <body>
-    <figure class="card">
-        <img src="./rostro.jpg" alt="RostroMujer" class="img">
-        <h3 class="name">Alexandra [Ceo Google]</h3>
+      <figure class="card">
+        <img class="img" src="./rostro.jpg" alt="WomanFace">
+        <h3 class="name">Alexandra [Ceo Apple]</h3>
         <a class="cta" href="#">Entra Ahora</a>
-    </figure>
+      </figure>
 
 </body>
 </html>
