--- a/Bordes_Sombras_CARDS/Border-Radius/Practica/index.html
+++ b/Bordes_Sombras_CARDS/Border-Radius/Practica/index.html
@@ -10,9 +10,10 @@
 </head>
 <body>
     <figure class="card">
-        <img src="./rostro.jpg" alt="woman face" class="img">
-        <h3 class="name">Alexandra [CEO]</h3>
-        <a class="cta" href="#">Entra Ahora</a>
+        <img src="./rostro.jpg" alt="" class="img">
+        <h3 class="name">Alexandra [CEO Google]</h3>
+        <a href="#" class="cta">Entra Ahora</a>
     </figure>
+
 </body>
 </html>
