--- a/Bordes_Sombras_CARDS/Border-Radius/Practica/index.html
+++ b/Bordes_Sombras_CARDS/Border-Radius/Practica/index.html
@@ -6,14 +6,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles.css">
-    <title>Card-1</title>
+    <title>Card</title>
 </head>
 <body>
-    <figure class="card">
-        <img src="./rostro.jpg" alt="" class="img">
-        <h3 class="name">Alexandra [CEO Google]</h3>
-        <a href="#" class="cta">Entra Ahora</a>
-    </figure>
 
 </body>
 </html>
