--- a/Proyecto_Inicial/index.html
+++ b/Proyecto_Inicial/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./normalize.css">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="shortcut icon" href="./img/fav.png" type="image/x-icon">
     <title>Primer Proyecto</title>
 </head>
 <body>
-
+    <h1>Bienvenido a la Pagina</h1>
 </body>
 </html>
